--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         
         <div class="bio-card">
             <div class="photo">
-                <img src="https://via.placeholder.com/150" alt="Student Photo">
+                <img src="img/Thea Francis.jpg alt="Thea Francis">
             </div>
             <div class="bio">
-                <h2>John Doe</h2>
-                <p>Hi, I'm John, a passionate software developer currently enrolled in the Code:You bootcamp. I love building responsive web applications and constantly exploring new technologies.</p>
+                <h2>Thea Francis</h2>
+                <p>Hi, I'm Thea, a passionate software developer currently enrolled in the Code:You bootcamp. I'm a developer specializing in environmental data analysis with Python and R. My projects include an AI chess engine in Java and iOS health apps using Swift and CareKit.</p>
             </div>
         </div>
 
@@ -28,6 +28,8 @@
             <a href="https://linkedin.com/in/username" target="_blank" class="link-btn">LinkedIn</a>
         </div>
     </div>
-
+    <script>
+        alert("Hello world, I am a Developer!");
+    </script>
 </body>
 </html>
