Updated bio, image, button color, and added JavaScript alert

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         
         <div class="bio-card">
             <div class="photo">
-                <img src="img/Thea Francis.jpg alt="Thea Francis">
+                <img src="img/Thea.jpg" alt="Thea Francis">
             </div>
             <div class="bio">
                 <h2>Thea Francis</h2>
@@ -24,8 +24,8 @@
         </div>
 
         <div class="links">
-            <a href="https://github.com/username" target="_blank" class="link-btn">GitHub</a>
-            <a href="https://linkedin.com/in/username" target="_blank" class="link-btn">LinkedIn</a>
+            <a href="https://github.com/niveusgh" target="_blank" class="link-btn">GitHub</a>
+            <a href="https://linkedin.com/in/thea-francis/" target="_blank" class="link-btn">LinkedIn</a>
         </div>
     </div>
     <script>
